# ImageFilterGPU-Okab

./: CMakeLists.txt  README.md
scripts/: benchmark.sh  build.sh
src/: CudaKernels.cu  CudaKernels.h  GpuImage.h  ImageProcessor.cpp  ImageProcessor.h  main.cpp
